# proofcat

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.ja.md  README.md  README.ru.md  README.zh-CN.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish-updater-manifest.yml  release-readiness.yml
crates/offload-core/: Cargo.toml  build.rs
crates/offload-core/examples/: hash-bench.rs  storage-hash-bench.rs
crates/offload-core/src/: lib.rs
docs/: COMPARISON.md  TECHNICAL.md  TEST_REPORT.md  benchmark-protocol.md  crash-reporting.md  fault-matrix.md  ffmpeg-build.md  implementation-status.md  offload-guarantees.md  physical-media-qualification.md  product-roadmap.md  release-evidence-v0.3.0.md  threat-model.md
docs/assets/: _gen_comparison.py  icon-app.icns  soak-2026-07-13-log.md
docs/releases/: v0.3.0.md
sbom/: native-tools.cdx.json
scripts/: assemble-windows-tools.ps1  benchmark-release-gates.sh  build-ffmpeg-lgpl-macos.sh  build-ffmpeg-lgpl-windows.sh  check-bundled-tools.sh  check-ffmpeg-license.sh  fetch-third-party-sources.sh  generate-updater-manifest.mjs  macos-disk-full.sh  macos-filesystem-matrix.sh  process-kill-resume.sh  qualify-physical-macos.sh  qualify-physical-windows.ps1  soak-offload.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crash.rs  lib.rs  main.rs
src-tauri/src/offload/: chaos.rs  checkpoint.rs  hash_engine.rs  io_scheduler.rs  mod.rs  orchestrator.rs  report.rs  volume.rs
src-tauri/src/offload/copy_engine/: atomic_writer.rs  mod.rs
src-tauri/src/offload/mhl/: c4.rs  mod.rs  verifier.rs  xml_writer.rs
src-tauri/tools/: CURL_LICENSE.txt  MEDIAINFO_LICENSE.txt  TINYXML2_LICENSE.txt  ZENLIB_LICENSE.txt  ZLIB_LICENSE.txt  libzen.0.dylib  mediainfo
src-tauri/tools/exiftool/: LICENSE.txt  exiftool
src-tauri/tools/ff/: configure.txt  ffmpeg  ffprobe  libavdevice.62.1.103.dylib  libavfilter.11.4.103.dylib  libavformat.62.3.103.dylib  libavutil.60.8.103.dylib  libswresample.6.1.103.dylib  libswscale.9.1.103.dylib
